--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head><title>Assignment1.3</title></head>
 <body>
     <h1>Asignment 1.3</h1> 
+	<!-- Sample line for Subscript-->
 	<p><b>H<sub>2</sub>O</b> - Chemical composition of Water.</p>
+	<!-- Sample line for Superscript-->
 	<p><b>(a+b)<sup>2</sup></b> - a<sup>2</sup>+2ab+b<sup>2</sup></p>
 </body>
 </html>
